# KeyphraseActivation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt
audio_augmentation/: augmenter.py  crop.py  crop_silence.py
audio_generation/: synthesizer.py
audio_generation/elevenlabs_side/: driver.py
audio_generation/elevenlabs_side/internals/: .env  README.md  pyproject.toml  synthesizer.py
audio_generation/kokoro_side/: driver.py
audio_generation/kokoro_side/internals/: prosody.py  pyproject.toml  requirements.txt  synthesizer.py
audio_generation/piper_side/: driver.py
audio_generation/piper_side/internals/: main.py  pyproject.toml  requirements.txt  synthesizer.py
audio_generation/suno_side/: driver.py
audio_generation/suno_side/internals/: README.md  (+3 more)
audio_generation/tps_side/: tps_generator.py
data_generation/: __init__.py  clips_finder.py  main_audio_generator.py  search_before_gen.py
data_generation/keyphrase_finding/: driver.py
db/: db.sql  db_api.py
docker/: entrypoint.sh  setup_internals.sh
model/: __init__.py  dataset.py  model.py  spectrogram_config.py  training_augmentations.py
phrase_augmentation/: __init__.py  augmenter.py  confusers_generator.py  plain_negatives.py  punct_augmenter.py  util.py  words_augmenter.py
pipeline/: __init__.py  training_pipeline.py
tests/: test_phrase_augmenters.py
webui/: manage.py
webui/trainer/: __init__.py  admin.py  forms.py  models.py  tasks.py  urls.py  views.py
webui/webui/: __init__.py  settings.py  urls.py  wsgi.py
(+8 files in other folders)
