[project]
name = "keyphraseactivation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ctc-segmentation>=1.7.4",
    "datasets>=4.4.1",
    "django>=5.1",
    "g2p-en>=2.1.0",
    "jellyfish>=1.2.1",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "rapidfuzz>=3.14.3",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.8.1",
    "transformers>=4.57.1",
    "uv>=0.4.0",
    "wordfreq>=3.1.1",
]
