[project]
name = "internals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.1.2",
    "numpy>=2.3.4",
    "onnxruntime>=1.23.2",
    "piper-tts>=1.3.0",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
]
